--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
 @plugin "daisyui";
+
+
+body {
+       font-family: "Inter Tight", sans-serif;
+       font-optical-sizing: auto;
+       font-weight:400;
+       font-style: normal;
+     }
